--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -16,11 +16,19 @@ body {
 }
 
 h1 {
+  font-size: 2.25rem;
+}
+
+.h1-color {
   background-image: linear-gradient(25deg, #d64c7f, #ee4758 50%);
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   font-size: 2.25rem;
+}
+
+h2 {
+  font-size: 2rem;
 }
 
 .error-text {
