added descriptions for the first two tools

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap');
 
+/* General Content */
 * {
   margin: 0;
   padding: 0;
@@ -28,25 +29,32 @@ h1 {
 }
 
 h2 {
-  color: #212529;
   font-size: 2rem;
   line-height: 1.6;
   margin: 1rem 0;
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.5rem;
+  line-height: 1.6;
+  margin: 1rem 0;
+}
+
+h4 {
   color: #696969;
+  font-size: 1rem;
   margin: 1rem 0;
   text-transform: uppercase;
 }
 
 .error-text {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.25rem;
   color: #ee4758;
 }
 
+
+/* Main Content */
 .container {
   line-height: 1.4;
   padding: 1rem 2.5rem;
@@ -87,7 +95,7 @@ h3 {
 }
 
 .container-text {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.125rem;
   color: #353935;
   line-height: 1.6;
@@ -95,9 +103,14 @@ h3 {
 }
 
 .container-result {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 1.125rem;
   color: #353935;
+}
+
+.container-info {
+  font-size: 1.125rem;
+  text-align: left;
 }
 
 .container-input {
@@ -137,6 +150,18 @@ h3 {
   align-items: center;
 }
 
+
+/* Questions Content */
+.questions-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  margin: .5rem 0;
+  text-transform: uppercase;
+}
+
 .container-questions {
   display: grid;
   grid: auto / auto auto;
@@ -144,23 +169,30 @@ h3 {
   gap: 2rem;
 }
 
-.questions-content {  
-  text-align: left;
-}
 
+/* Footer Content */
 .container-footer {
   display: grid;
   grid-template-columns: auto auto auto auto;
   grid-template-rows: auto;
 }
 
-/* still thinking of what should be added here */
+.container-footer li {
+  margin: .5rem 0;
+  cursor: pointer;
+}
+
+.container-footer li:hover {
+  color: #ee4758;
+}
+
 .footer-info {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
   justify-content: center;
-  height: 100px;
-  width: auto;
+  align-items: center;
+  list-style: none;
 }
 
 .footer-content {
@@ -168,13 +200,4 @@ h3 {
   padding: 2rem;
   list-style: none;
   transition: color 0.3s ease;
-}
-
-.footer-content li {
-  margin: .5rem 0;
-  cursor: pointer;
-}
-
-.footer-content li:hover {
-  color: #ee4758;
 }
