--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -20,14 +20,6 @@ h1 {
   font-size: 2.25rem;
 }
 
-.h1-color {
-  background-image: linear-gradient(25deg, #d64c7f, #ee4758 50%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  font-size: 2.25rem;
-}
-
 h2 {
   font-size: 2rem;
   line-height: 1.6;
@@ -87,11 +79,10 @@ h4 {
 .container-title {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   margin: .5rem 0;
-  text-transform: uppercase;
 }
 
 .container-text {
@@ -177,12 +168,12 @@ h4 {
   grid-template-rows: auto;
 }
 
-.container-footer li {
+.container-footer p {
   margin: .5rem 0;
   cursor: pointer;
 }
 
-.container-footer li:hover {
+.container-footer p:hover {
   color: #ee4758;
 }
 
