--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+.contrast {
+  background-color: #f5f5f7;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -21,7 +25,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1.6;
   margin: 1rem 0;
 }
@@ -184,28 +188,27 @@ span, .span-color {
 }
 
 .benefits-card {
-  background-color: #f5f5f7;
-  border: solid white;
+  background-color: white;
   border-radius: .5rem;
   padding: 2rem;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-.card-emoji {
+.benefits-emoji {
   font-size: 2.5rem;
 }
 
-.card-emoji p {
+.benefits-emoji p {
   margin: 0;
   margin-bottom: 1rem;
 }
 
-.card-title h3 {
+.benefits-title h2 {
   margin: 0;
   margin-bottom: .5rem;
 }
 
-.card-desc {
+.benefits-desc {
   font-size: 1.125rem;
   max-width: 25ch;
 }
@@ -235,6 +238,49 @@ span, .span-color {
   align-items: center;
 }
 
+/* Use Content */
+.use-title span {
+  font-size: 1.875rem;
+  font-weight: 700;
+}
+
+.container-use {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 2rem;
+  max-width: 100rem;
+}
+
+.use-card {
+  padding: 2rem;
+  height: 15.625rem;
+}
+
+.card-img {
+  font-size: 2.5rem;
+}
+
+.card-img p {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.card-title h2 {
+  text-align: center;
+  margin: 0;
+  margin-bottom: .5rem;
+}
+
+.card-desc {
+  text-align: center;
+  font-size: 1.125rem;
+  max-width: 30ch;
+}
+
 /* Footer Content */
 .container-footer {
   display: grid;
@@ -253,11 +299,13 @@ span, .span-color {
 
 .footer-info {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
   justify-content: center;
   align-items: center;
-  list-style: none;
+}
+
+.footer-info img {
+  width: 8rem;
+  height: auto;
 }
 
 .footer-content {
