Added images and information for use.js

--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -246,7 +246,7 @@ span, .span-color {
 
 .container-use {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   justify-content: center;
   align-items: center;
   padding: 2rem;
@@ -256,16 +256,18 @@ span, .span-color {
 
 .use-card {
   padding: 2rem;
-  height: 15.625rem;
+  height: 16rem;
 }
 
 .card-img {
-  font-size: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card-img p {
-  text-align: center;
-  margin: 0;
+.card-img img {
+  height: 4rem;
+  width: auto;
   margin-bottom: 1rem;
 }
 
