--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -36,12 +36,155 @@ h3 {
   margin: 1rem 0;
 }
 
-h4 {
-  font-size: 1rem;
-  margin: 1rem 0;
-  text-transform: uppercase;
+/* Function Buttons  */
+.button-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
 }
 
+.button-list button {
+  padding: .5rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.button-list button:hover {
+  color: #ee4758;
+}
+
+/* Main Content */
+.container {
+  line-height: 1.4;
+  padding: 1rem 2.5rem;
+  text-align: center;
+  max-width: 100rem !important;
+}
+
+.container-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inter', sans-serif;
+  font-weight: 900;
+  margin: .5rem 0;
+}
+
+.container-text {
+  font-size: 1.125rem;
+  color: #62646c;
+  line-height: 1.6;
+  margin: 1rem 0;
+}
+
+/* Form Content*/
+.form {
+  display: block;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  max-width: 37.5rem;
+  margin: 0 auto;
+}
+
+.form-title {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+.form-input {
+  position: relative;
+}
+
+.form-input, .form button {
+  outline: none;
+  border: 1px solid #e5e7eb;
+  margin: 8px 0;
+}
+
+.form-input {
+  background-color: #fff;
+  padding: 1rem;
+  padding-right: 3rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  width: 300px;
+  border-radius: 0.25rem;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
+
+.form-submit {
+  display: block;
+  padding: 0.75rem;
+  background-color: #ee4758;
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  width: 100%;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+/* Result Content*/ 
+.container-result {
+  display: flex;
+  flex-direction: row;
+  max-width: 37.5rem;
+  margin: 0 auto;
+}
+
+.result-box {
+  margin-top: 2rem;
+  border: 0.063rem #DFE3E8 solid;
+  width: 100%;
+}
+
+.result-data {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 1rem;
+  width: 100%;
+  margin-top: 2rem;
+  border: 0.063rem #DFE3E8 solid;
+  gap:10px;
+}
+
+.result-ul {
+  margin-top: 2rem;
+  width: 100%;
+  border: 0.063rem #DFE3E8 solid;
+  border-radius: 0.25rem;
+}
+
+.result-li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  list-style: none;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.063rem 0 #DFE3E8;
+}
+
+.result-bold {
+  font-weight: 500;
+}
+
+.result {
+  font-weight: 400;
+}
+
+/* Join 1 & 2 Content */
 .container-sentence, .sentence-button {
   text-align: center;
   max-width: 30rem;
@@ -79,106 +222,7 @@ span, .span-color {
   background-color: rgba(238, 71, 88, 0.4);
 }
 
-.error-text {
-  font-weight: 300;
-  font-size: 1.25rem;
-  color: #ee4758;
-}
-
-/* Main Content */
-.container {
-  line-height: 1.4;
-  padding: 1rem 2.5rem;
-  text-align: center;
-  max-width: 100rem !important;
-}
-
-.button-list {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.button-list button {
-  padding: .5rem;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 1rem;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.button-list button:hover {
-  color: #ee4758;
-}
-
-.container-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Inter', sans-serif;
-  font-weight: 900;
-  margin: .5rem 0;
-}
-
-.container-text {
-  font-size: 1.125rem;
-  color: #62646c;
-  line-height: 1.6;
-  margin: 1rem 0;
-}
-
-.form {
-  display: block;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-}
-
-.form-title {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  font-weight: 400;
-  text-align: center;
-}
-
-.form-input {
-  position: relative;
-}
-
-.form-input, .form button {
-  outline: none;
-  border: 1px solid #e5e7eb;
-  margin: 8px 0;
-}
-
-.form-input {
-  background-color: #fff;
-  padding: 1rem;
-  padding-right: 3rem;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  width: 300px;
-  border-radius: 0.5rem;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-}
-
-.form-submit {
-  display: block;
-  padding: 0.75rem;
-  background-color: #ee4758;
-  color: #ffffff;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  font-weight: 500;
-  width: 100%;
-  border-radius: 0.5rem;
-  cursor: pointer;
-}
-
+/* Benefits Content */
 .container-benefits {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -211,31 +255,6 @@ span, .span-color {
 .benefits-desc {
   font-size: 1.125rem;
   max-width: 25ch;
-}
-
-.container-result {
-  font-weight: 400;
-  font-size: 1.125rem;
-  color: #353935;
-}
-
-.container-info {
-  font-size: 1.125rem;
-  text-align: left;
-}
-
-.container-li {
-  list-style: none;
-  padding: 1rem;
-  font-weight: 400;
-}
-
-.container-ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Use Content */
