--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -41,7 +41,7 @@ h3 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .button-list button {
@@ -146,6 +146,17 @@ h3 {
   margin-top: 2rem;
   border: 0.063rem #DFE3E8 solid;
   width: 100%;
+  border: 0.063rem #DFE3E8 solid;
+  border-radius: 0.25rem;
+}
+
+.result-name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 0.063rem #DFE3E8 solid;
+  padding: 1rem;
 }
 
 .result-data {
@@ -153,9 +164,13 @@ h3 {
   grid-template-columns: auto auto;
   padding: 1rem;
   width: 100%;
-  margin-top: 2rem;
-  border: 0.063rem #DFE3E8 solid;
-  gap:10px;
+  /* margin-top: 2rem; */
+  /* border: 0.063rem #DFE3E8 solid; */
+  gap:2rem;
+}
+
+.rows {
+  text-align: left;
 }
 
 .result-ul {
@@ -172,12 +187,17 @@ h3 {
   align-items: flex-start;
   list-style: none;
   padding: 1rem;
-  border-radius: 0.25rem;
   box-shadow: 0 0.063rem 0 #DFE3E8;
 }
 
 .result-bold {
+  padding-bottom: .25rem;
   font-weight: 500;
+}
+
+.result-title {
+  padding-bottom: .25rem;
+  font-weight: 400;
 }
 
 .result {
